test/bad/lemma_abox_doublebind.pa
lemma doublebind : 0 = 0 {
    given x {
        given x {
            x = x by eq_intro;
        }
        x = x by eq_intro;
    }
    0 = 0 by eq_intro;
}
